--- a/metal/roles/metallb_config/tasks/main.yml
+++ b/metal/roles/metallb_config/tasks/main.yml
@@ -17,13 +17,21 @@
     state: present
     src: ~/metallb-native.yaml
   
-# - name: Remove an existing Service object
-#   kubernetes.core.k8s:
-#     state: absent
-#     api_version: v1
-#     kind: Service
-#     namespace: testing
-#     name: web
+- name: Remove wrong MetalLB Controller
+  kubernetes.core.k8s:
+    state: absent
+    api_version: apps/v1
+    kind: Deployment
+    namespace: metallb-system
+    name: controller
+
+- name: Remove wrong MetalLB speaker
+  kubernetes.core.k8s:
+    state: absent
+    api_version: apps/v1
+    kind: DaemonSet
+    namespace: metallb-system
+    name: speaker
 
 - name: Create MetalLB addresspool base on network info
   kubernetes.core.k8s:
