--- a/metal/inventories/prod.yml
+++ b/metal/inventories/prod.yml
@@ -7,4 +7,4 @@ metal:
         master2: {ansible_host: 192.168.1.202, mac: 'ec:b1:d7:6b:66:d6', disk: sda, network_interface: eno1}
     workers:
       hosts:
-        worker0: {ansible_host: 192.168.1.203, mac: 'ec:b1:d7:72:5f:c8', disk: sda, network_interface: eno1}
+        metal3: {ansible_host: 192.168.1.203, mac: 'ec:b1:d7:72:5f:c8', disk: sda, network_interface: eno1}
