--- a/metal/roles/metallb_config/tasks/main.yml
+++ b/metal/roles/metallb_config/tasks/main.yml
@@ -30,10 +30,14 @@
 - name: Create MetalLB addresspool base on network info
   kubernetes.core.k8s:
     definition: "{{ lookup('template', 'addresspool.yaml.j2') | from_yaml }}"
+  retries: 10
+  delay: 10
 
 - name: Create MetalLB l2 advertisement
   kubernetes.core.k8s:
     definition: "{{ lookup('template', 'advertisement.yaml.j2') | from_yaml }}"
+  retries: 10
+  delay: 10
 
 - name: Remove wrong MetalLB service
   kubernetes.core.k8s:
