--- a/system/descheduler/values.yaml
+++ b/system/descheduler/values.yaml
@@ -13,4 +13,4 @@ descheduler:
       RemovePodsViolatingInterPodAntiAffinity:
         enabled: true
       LowNodeUtilization:
-        enabled: false
+        enabled: true
