--- a/system/descheduler/values.yaml
+++ b/system/descheduler/values.yaml
@@ -14,3 +14,5 @@ descheduler:
         enabled: true
       LowNodeUtilization:
         enabled: true
+      HighNodeUtilization:
+        enabled: true
