--- a/system/descheduler/values.yaml
+++ b/system/descheduler/values.yaml
@@ -14,3 +14,13 @@ descheduler:
         enabled: true
       LowNodeUtilization:
         enabled: true
+        params:
+          nodeResourceUtilizationThresholds:
+            thresholds:
+              cpu: 20
+              memory: 20
+              pods: 20
+            targetThresholds:
+              cpu: 50
+              memory: 50
+              pods: 50
