--- a/platform/harbor/values.yaml
+++ b/platform/harbor/values.yaml
@@ -1,4 +1,8 @@
 harbor:
+  core:
+    revisionHistoryLimit: 3
+  jobservice:
+    revisionHistoryLimit: 3
   chartmuseum:
     revisionHistoryLimit: 3
   registry:
