--- a/platform/gitea/values.yaml
+++ b/platform/gitea/values.yaml
@@ -25,6 +25,7 @@ gitea:
   persistence:
     storageClass: longhorn
   postgresql:
+    enabled: false
     persistence:
       storageClass: longhorn
       # size: 2Gi
