--- a/apps/grocy/templates/deployment.yaml
+++ b/apps/grocy/templates/deployment.yaml
@@ -20,3 +20,22 @@ spec:
           image: lscr.io/linuxserver/grocy:latest
           ports:
             - containerPort: 9283
+          env:
+            - name: PUID
+              value: 1000
+            - name: PGID
+              value: 1000
+            - name: PGID
+              value: Europe/London
+          volumeMounts:
+          - mountPath: /config
+            name: grocy-config
+  volumeClaimTemplates:
+  - metadata:
+      name: grocy-config
+    spec:
+      accessModes:
+        - ReadWriteOnce
+      resources:
+        requests:
+          storage: 1Gi
