--- a/apps/matrix/kustomization.yaml
+++ b/apps/matrix/kustomization.yaml
@@ -30,3 +30,14 @@ patchesJson6902:
       - op: add
         path: "/spec/template/spec/containers/0/args/-"
         value: "--skip-db-sanity"
+  - target:
+      group: apps
+      version: v1
+      kind: StatefulSet
+      name: matrix-nats
+    patch: |-
+      - op: replace
+        path: "/spec/template/spec/containers/0/image"
+        value: "nats:2.9.10-alpine"
+
+
