--- a/system/monitoring-system/matrix-alertmanager.yaml
+++ b/system/monitoring-system/matrix-alertmanager.yaml
@@ -33,9 +33,9 @@ spec:
           - name: MATRIX_HOMESERVER_URL
             value: https://matrix.tribz.cloud
           - name: MATRIX_ROOMS
-            value: 'matrix/!Q7iSV7EXDYsgrSsn:matrix.tribz.cloud'
+            value: 'matrix/!AQzhDu21E4cP0QIB:matrix.tribz.cloud'
           - name: MATRIX_TOKEN
-            value: m0w0PhSimc3fS_Y_H1Fn-kHmJG19wY8WJ2kJGWxhjPU
+            value: fxyETsczr3oZYKMxBLl4z3roJKT-MfYDhhQmjTb-bCE
           - name: MATRIX_USER
             value: botalertmanager
           - name: MENTION_ROOM
