--- a/system/metallb-system/kustomization.yaml
+++ b/system/metallb-system/kustomization.yaml
@@ -9,16 +9,24 @@ helmCharts:
 - name: metallb
   repo: https://metallb.github.io/metallb
   version: 0.*.*
-  releaseName: " "
+  releaseName: metallb-system
   valuesFile: values.yaml
   includeCRDs: true
 
-# patchesJson6902:
-#   - target:
-#       version: v1
-#       kind: Service
-#       name: metallb-system-speaker-monitor-service
-#     patch: |-
-#       - op: replace
-#         path: "/spec/ports/0/name"
-#         value: "monitoring"
+patchesJson6902:
+  - target:
+      version: v1
+      kind: Service
+      name: metallb-system-speaker-monitor-service
+    patch: |-
+      - op: replace
+        path: "/spec/ports/0/name"
+        value: "monitoring"
+  - target:
+      version: v1
+      kind: Service
+      name: metallb-system-controller-monitor-service
+    patch: |-
+      - op: replace
+        path: "/spec/ports/0/name"
+        value: "monitoring"
