--- a/system/metallb-system/kustomization.yaml
+++ b/system/metallb-system/kustomization.yaml
@@ -37,17 +37,17 @@ patchesJson6902:
       name: metallb-system-controller
     patch: |-
       - op: add
-        path: "/rules
+        path: "/rules"
         value: 
-        - verbs:
-            - create
-            - delete
-            - get
-            - list
-            - patch
-            - update
-            - watch
-          apiGroups:
-            - 'apiextensions.k8s.io'
-          resources:
-            - customresourcedefinitions
+          - verbs:
+              - create
+              - delete
+              - get
+              - list
+              - patch
+              - update
+              - watch
+            apiGroups:
+              - 'apiextensions.k8s.io'
+            resources:
+              - customresourcedefinitions
