--- a/system/metallb-system/kustomization.yaml
+++ b/system/metallb-system/kustomization.yaml
@@ -39,15 +39,15 @@ patchesJson6902:
       - op: add
         path: "/rules/-"
         value: 
-          - verbs:
-              - create
-              - delete
-              - get
-              - list
-              - patch
-              - update
-              - watch
-            apiGroups:
-              - 'apiextensions.k8s.io'
-            resources:
-              - customresourcedefinitions
+          verbs:
+            - create
+            - delete
+            - get
+            - list
+            - patch
+            - update
+            - watch
+          apiGroups:
+            - 'apiextensions.k8s.io'
+          resources:
+            - customresourcedefinitions
