--- a/apps/seafile/values.yaml
+++ b/apps/seafile/values.yaml
@@ -1,4 +1,8 @@
 seafile:
+  image:
+    repository: seafileltd/seafile-mc
+    tag: latest
+    pullPolicy: IfNotPresent
   env:
     TZ: Europe/Zurich
   ingress:
