--- a/debugging/seafile/Chart.yaml
+++ b/debugging/seafile/Chart.yaml
@@ -3,5 +3,5 @@ name: seafile
 version: 0.0.0
 dependencies:
   - name: seafile
-    version: "> 0.0.0"
-    repository: https://300481.github.io/charts/
+    version: "> 1.0.0"
+    repository: https://k8s-at-home.com/charts
