--- a/system/monitoring-system/values.yaml
+++ b/system/monitoring-system/values.yaml
@@ -47,6 +47,13 @@ prometheus:
          resources:
            requests:
              storage: 50Gi
+    additionalScrapeConfigs:
+    - job_name: 'opnsense-node-exporter'
+      static_configs:
+        - targets: ['opnsense.tribz.cloud:9100']
+    # - job_name: 'truenas-graphite-exporter'
+    #   static_configs:
+    #     - targets: ['dummy-ops-cluster-dummy-master.mysql:9125']
 alertmanager:
   config:
     route:
