--- a/system/monitoring-system/values.yaml
+++ b/system/monitoring-system/values.yaml
@@ -19,6 +19,17 @@ grafana:
     - name: Loki
       type: loki
       url: http://loki.loki:3100
+    - name: InfluxDB
+      type: influxdb
+      access: proxy
+      url: https://influxdb.tribz.cloud
+      secureJsonData:
+        token: token
+        password: kSIeaF8cZmHmcJ0IzqOPFFBe4p_x7n0d1lq1ECH2jcK_1oGNbtg4C0zqbjJMgqLzy1WI7Y_FWk524T3fUap6rg==
+      jsonData:
+        version: Flux
+        organization: opnsense
+        defaultBucket: opnsense
   envFromSecret: grafana-secrets
   grafana.ini:
     server:
@@ -47,7 +58,7 @@ prometheus:
          resources:
            requests:
              storage: 50Gi
-    additionalScrapeConfigs:
+    # additionalScrapeConfigs:
     # - job_name: 'opnsense-telegraf'
     #   static_configs:
     #     - targets: ['opnsense.tribz.cloud:9273']
