--- a/system/monitoring-system/values.yaml
+++ b/system/monitoring-system/values.yaml
@@ -23,15 +23,15 @@ grafana:
       type: influxdb
       access: proxy
       url: https://influxdb.tribz.cloud
-      user: admin
-      password: adminadmin
       secureJsonData:
         token: token
         password: 59i8kcKcMdrrnVQPgoZkHNAH8dkICQe_mHgySsY1JFzqeb9CJDwWSo3C81nTzGyx_6TnPHfPpd9207n9OA3Dlg==
+        httpHeaderValue1: "Token 59i8kcKcMdrrnVQPgoZkHNAH8dkICQe_mHgySsY1JFzqeb9CJDwWSo3C81nTzGyx_6TnPHfPpd9207n9OA3Dlg=="
       jsonData:
         version: Flux
         organization: opnsense
         defaultBucket: opnsense
+        httpHeaderName1: "Authorization"
   envFromSecret: grafana-secrets
   grafana.ini:
     server:
