--- a/apps/graylog/values.yaml
+++ b/apps/graylog/values.yaml
@@ -1,4 +1,5 @@
 graylog:
+  graylog:
     persistence:
       enabled: true
       accessMode: ReadWriteOnce
@@ -10,5 +11,23 @@ graylog:
       mmdbUri: ""
     rootUsername: "admin"
     rootPassword: "admin"
-
     rootTimezone: "Europe/Zurich"
+    elasticsearch:
+      ## Major version of the Elasticsearch version used.
+      ## It is required by Graylog 4. See https://docs.graylog.org/en/4.0/pages/configuration/elasticsearch.html#available-elasticsearch-configuration-tunables
+      version: "7"
+      ## List of Elasticsearch hosts Graylog should connect to.
+      ## Need to be specified as a comma-separated list of valid URIs for the http ports of your elasticsearch nodes.
+      ## If one or more of your elasticsearch hosts require authentication, include the credentials in each node URI that
+      ## requires authentication.
+      ##
+      # hosts: http://elasticsearch-client.graylog.svc.cluster.local:9200
+      hosts: http://elasticsearch.elasticsearch.svc.cluster.local:9200
+      # Allow elasticsearch hosts to be fetched from a k8s secret
+      # {{ graylog.fullname }}-es will be used as uriSecretName if left empty
+      uriSecretName: ""
+      uriSecretKey: ""
+      uriSSL: false
+  tags:
+    # If true, this chart will install Elasticsearch from requirement dependencies
+    install-elasticsearch: false
