--- a/apps/elasticsearch/Chart.yaml
+++ b/apps/elasticsearch/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
-name: seafile
+name: elasticsearch
 version: 0.0.0
 dependencies:
-  - name: seafile
+  - name: elasticsearch
     version: "> 0.0.0"
-    repository: https://300481.github.io/charts/
+    repository: https://helm.elastic.co
