--- a/apps/graylog/values.yaml
+++ b/apps/graylog/values.yaml
@@ -22,7 +22,7 @@ graylog:
       ## requires authentication.
       ##
       # hosts: http://elasticsearch-client.graylog.svc.cluster.local:9200
-      hosts: http://elasticsearch.elasticsearch.svc.cluster.local:9200
+      hosts: http://elasticsearch-master.elasticsearch.svc.cluster.local:9200
       # Allow elasticsearch hosts to be fetched from a k8s secret
       # {{ graylog.fullname }}-es will be used as uriSecretName if left empty
       uriSecretName: ""
