--- a/apps/graylog/values.yaml
+++ b/apps/graylog/values.yaml
@@ -21,7 +21,7 @@ graylog:
     ## requires authentication.
     ##
     # hosts: http://elasticsearch-client.graylog.svc.cluster.local:9200
-    hosts: http://elasticsearch-master.elasticsearch.svc.cluster.local:9200
+    hosts: http://elasticsearchsss-master.elasticsearch.svc.cluster.local:9200
 tags:
   # If true, this chart will install Elasticsearch from requirement dependencies
   install-elasticsearch: false
