--- a/apps/elasticsearch/values.yaml
+++ b/apps/elasticsearch/values.yaml
@@ -2,7 +2,7 @@ elasticsearch:
   volumeClaimTemplate:
     resources:
       requests:
-        storage: 5Gi  # default 30Gi
+        storage: "5Gi"  # default 30Gi
   extraEnvs:
     - name: TZ
       value: Europe/Zurich
