--- a/apps/graylog/values.yaml
+++ b/apps/graylog/values.yaml
@@ -1,15 +1,16 @@
 graylog:
-  elasticsearch:
-    ## Major version of the Elasticsearch version used.
-    ## It is required by Graylog 4. See https://docs.graylog.org/en/4.0/pages/configuration/elasticsearch.html#available-elasticsearch-configuration-tunables
-    version: "7"
-    ## List of Elasticsearch hosts Graylog should connect to.
-    ## Need to be specified as a comma-separated list of valid URIs for the http ports of your elasticsearch nodes.
-    ## If one or more of your elasticsearch hosts require authentication, include the credentials in each node URI that
-    ## requires authentication.
-    ##
-    # hosts: http://elasticsearch-client.graylog.svc.cluster.local:9200
-    hosts: "http://test2.ch"
+  graylog: 
+    elasticsearch:
+      ## Major version of the Elasticsearch version used.
+      ## It is required by Graylog 4. See https://docs.graylog.org/en/4.0/pages/configuration/elasticsearch.html#available-elasticsearch-configuration-tunables
+      version: "7"
+      ## List of Elasticsearch hosts Graylog should connect to.
+      ## Need to be specified as a comma-separated list of valid URIs for the http ports of your elasticsearch nodes.
+      ## If one or more of your elasticsearch hosts require authentication, include the credentials in each node URI that
+      ## requires authentication.
+      ##
+      # hosts: http://elasticsearch-client.graylog.svc.cluster.local:9200
+      hosts: "http://test2.ch"
   persistence:
     enabled: true
     accessMode: ReadWriteOnce
