--- a/apps/graylog/values.yaml
+++ b/apps/graylog/values.yaml
@@ -10,7 +10,7 @@ graylog:
       ## requires authentication.
       ##
       # hosts: http://elasticsearch-client.graylog.svc.cluster.local:9200
-      hosts: "http://test2.ch"
+      hosts: "http://elasticsearch-master.elasticsearch.svc.cluster.local:9200"
   persistence:
     enabled: true
     accessMode: ReadWriteOnce
