--- a/apps/elasticsearch/Chart.yaml
+++ b/apps/elasticsearch/Chart.yaml
@@ -3,5 +3,5 @@ name: elasticsearch
 version: 0.0.0
 dependencies:
   - name: elasticsearch
-    version: "> 0.0.0"
+    version: "7.17.3"
     repository: https://helm.elastic.co
