--- a/apps/graylog/templates/syslog-ingress.yaml
+++ b/apps/graylog/templates/syslog-ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name:  graylog-syslog
-  namespace: graylog-syslog
+  namespace: graylog
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     hajimari.io/appName: graylog-syslog
