--- a/system/ingress-nginx/values.yaml
+++ b/system/ingress-nginx/values.yaml
@@ -11,4 +11,5 @@ ingress-nginx:
         enabled: true
   tcp:
     22: gitea/gitea-ssh:22
-    514: graylog/graylog-syslog-tcp:514
+  udp:
+    514: graylog/graylog-syslog-udp:514
