--- a/system/monitoring-system/values.yaml
+++ b/system/monitoring-system/values.yaml
@@ -34,7 +34,7 @@ grafana:
       access: proxy
       url: https://elasticsearch.tribz.cloud
       jsonData:
-        # indexName: 
+        indexName: opnsense_filterlog_0
         interval: Daily
         timeField: "timestamp"
         esVersion: 7.17.3
