--- a/system/monitoring-system/values.yaml
+++ b/system/monitoring-system/values.yaml
@@ -17,25 +17,24 @@ grafana:
           - *host
   plugins:
     - grafana-worldmap-panel
-  dashboardProviders: 
-    dashboardproviders.yaml:
-      apiVersion: 1
-      providers:
-      - name: 'default'
-        orgId: 1
-        folder: ''
-        type: file
-        disableDeletion: false
-        editable: true
-        options:
-          path: /var/lib/grafana/dashboards/default
-  dashboards:
-    default:
-      OPNsense:
-        url: https://raw.githubusercontent.com/bsmithio/OPNsense-Dashboard/master/OPNsense-Grafana-Dashboard.json
-      Longhorn:
-        gnetId: 13032
-        # datasource: yourdatasource
+  # dashboardProviders: 
+  #   dashboardproviders.yaml:
+  #     apiVersion: 1
+  #     providers:
+  #     - name: 'default'
+  #       orgId: 1
+  #       folder: ''
+  #       type: file
+  #       disableDeletion: false
+  #       editable: true
+  #       options:
+  #         path: /var/lib/grafana/dashboards/default
+  # dashboards:
+  #   default:
+  #     OPNsense:
+  #       url: https://raw.githubusercontent.com/bsmithio/OPNsense-Dashboard/master/OPNsense-Grafana-Dashboard.json
+  #     Longhorn:
+  #       gnetId: 13032
   additionalDataSources:
     - name: Loki
       type: loki
